Fix footer on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ td:last-child {
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   right: 0;
   margin: 10px;
